# easycoin

./: .gitignore  .gitmodules  README.md  README.txt  blocks.ts  bootstrap.ts  chains.ts  clear_databases.ts  constants.ts  database.ts  discoveredPeerList.json  index.ts  init.ts  logLongestChain.ts  mempool.ts  message.ts  mine.ts  miner_class.ts  miner_thread.ts  network.ts  objects.ts  package-lock.json  package.json  peer.ts  send_txs.ts  transactions.ts  ts_miner_thread.ts  tsconfig.json  utils.ts  utxo.ts
debug/: block_tester.ts  callback_assign.ts  clearDB.ts  miner_test.ts  network_undefined.ts  runtypes_test.ts  sha256_collision.ts  socket_destroy.ts  tx_tester.ts  txtestDB.json
debug/hw1/: utils.ts
marabu_miner/: CMakeLists.txt
marabu_miner/source/: hash-rate-thread.cpp  hash-rate.cpp  hash.cpp  hash.h  hex.h  miner.cpp
